# openclaw-workspace

./: .gitignore  HEARTBEAT.md  MEMORY.md  skills-classification.md  浏览器自动化配置说明.md
.clawhub/: lock.json
.openclaw/: workspace-state.json
agent_os/: ARCHITECTURE-v2.0.md  ARCHITECTURE-v3.0.md  ARCHITECTURE-v4.0.md  ARCHITECTURE-v5.0.md  ARCHITECTURE-v6.0.md  ARCHITECTURE-v7.0.md  ARCHITECTURE.md  EVALUATION-v6.0.md  GAP-ANALYSIS.md  README.md  REVIEW-QUESTIONS.md  __init__.py  pyproject.toml
agent_os/agent/: runtime.py
agent_os/api/: cli.py  http_server.py
agent_os/compute/: resource_manager.py
agent_os/core/: engine.py  event_bus.py  plugin_system.py  state_machine.py
agent_os/intelligence/: router.py
agent_os/legacy/: mesh.py
agent_os/network/: mesh.py  protocol.proto
agent_os/observability/: __init__.py
agent_os/reviews/: chatgpt-review.md  chatgpt-v5-review.md  cross-chatgpt-on-gemini.md  cross-gemini-on-chatgpt.md  cross-google-ai-on-chatgpt.md  gemini-review.md
agent_os/runtime/: engine_prototype.py
agent_os/security/: crypto.py  enclave.py
agent_os/specs/: IR-SPEC.md  ir-schema.json
agent_os/storage/: __init__.py
agent_os/tests/: test_integration.py
ai-daily-reports/: 2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-02.md  2026-05-03.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-15.md  2026-05-16.md  2026-05-17.md  2026-05-18.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  (+18 more)
(+203 files in other folders)
